--- a/jr_func_library/src/main/res/values/strings.xml
+++ b/jr_func_library/src/main/res/values/strings.xml
@@ -17,4 +17,17 @@
     <string name="func_sign_out">退出</string>
     <string name="func_hint">提示</string>
     <string name="func_no_sd_card">没有找到SD卡</string>
+
+    <style name="rightDialogStyle" parent="@android:style/Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@color/ui_white</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
+
+    <style name="right_animstyle">
+        <item name="android:windowEnterAnimation">@anim/right_dialog_in_anim</item>
+        <item name="android:windowExitAnimation">@anim/right_dialog_out_anim</item>
+    </style>
 </resources>
